# servant-presentation

./: .gitignore  README.md  servant-todo.cabal
exe/: Main.hs
servant-todo-common/: LICENSE  servant-todo-common.cabal
servant-todo-common/src/Todo/Type/: API.hs  Error.hs  Todo.hs  UUID.hs  User.hs
servant-todo-server/: servant-todo.cabal
servant-todo-server/exe/: Main.hs
servant-todo-server/src/Todo/: API.hs  App.hs  Config.hs  Core.hs
servant-todo-server/src/Todo/DB/: Todo.hs  User.hs
servant-todo-server/src/Todo/Web/: Todo.hs  User.hs
src/Todo/: API.hs  App.hs  Config.hs  Core.hs
src/Todo/Config/: Auth.hs  Redis.hs  Types.hs
src/Todo/DB/: Todo.hs  User.hs
src/Todo/Type/: Todo.hs  UUID.hs  User.hs
src/Todo/Web/: Docs.hs  Todo.hs  User.hs
tests/: Main.hs
tests/Tests/Todo/: Web.hs
