name:                servant-todo
version:             0.1.0.0
synopsis:            A sample todo application written with Servant
license:             BSD3
license-file:        LICENSE
author:              David Johnson
maintainer:          djohnson.m@gmail.com
copyright:           Chicago Haskell 2015
category:            Web
build-type:          Simple
cabal-version:       >=1.10
description:         Todo application written in Servant

executable web
  main-is:             Main.hs
  hs-source-dirs:      exe
  ghc-options:         -Wall
  build-depends:       base >=4.7 && < 5
                     , aeson
                     , bytestring
                     , envy
                     , stm
                     , servant-todo
                     , transformers
                     , transformers-base
                     , monad-control
                     , servant
                     , lifted-base
                     , either
                     , jwt
                     , random
                     , mtl
                     , servant-server
                     , servant-docs
                     , QuickCheck
                     , quickcheck-instances
                     , text
                     , time
                     , uuid
                     , http-types
                     , unordered-containers
                     , hashable
                     , wai
                     , warp
  default-language:    Haskell2010

library
  default-language:    Haskell2010
  hs-source-dirs:      src
  build-depends:       base >=4.7 && < 5
                     , aeson
                     , bytestring
                     , envy
                     , stm
                     , servant-client
                     , random
                     , mtl
                     , jwt
                     , transformers
                     , transformers-base
                     , monad-control
                     , servant
                     , lifted-base
                     , either
                     , servant-server
                     , servant-docs
                     , QuickCheck
                     , quickcheck-instances
                     , http-types
                     , unordered-containers
                     , hashable
                     , text
                     , time
                     , uuid
                     , wai
                     , warp
  exposed-modules:
    Todo.API
    Todo.App
    Todo.Core
    Todo.Config
    Todo.DB.Todo
    Todo.DB.User
    Todo.Web.Todo
    Todo.Web.Docs
    Todo.Web.User
    Todo.Type.Todo
    Todo.Type.Error
    Todo.Type.User
    Todo.Type.UUID

test-suite tests
    type:              exitcode-stdio-1.0
    main-is:           Main.hs
    hs-source-dirs:    tests
    build-depends:       QuickCheck
                       , aeson
                       , attoparsec
                       , aws
                       , base
                       , bytestring
                       , containers
                       , either
                       , hspec
                       , hspec-core
                       , jwt
                       , monad-control
                       , mtl
                       , quickcheck-instances
                       , random
                       , servant
                       , servant-client
                       , servant-server
                       , split
                       , text
                       , time
                       , timeit
                       , transformers
                       , unordered-containers
                       , uuid
                       , wai
                       , wai-extra
                       , warp
    ghc-options:       -Wall -rtsopts -threaded -funbox-strict-fields
    default-language:  Haskell2010
    other-modules:
      Todo.Test.Util

