name:                servant-todo-common
version:             0.1.0.0
license:             BSD3
license-file:        LICENSE
author:              David Johnson
maintainer:          djohnson.m@gmail.com
category:            Web
build-type:          Simple
cabal-version:       >=1.10

library
  exposed-modules:     Todo.Type.Error, Todo.Type.Todo, Todo.Type.User, Todo.Type.UUID, Todo.Type.API
  other-extensions:    OverloadedStrings, GeneralizedNewtypeDeriving, DeriveGeneric, TypeFamilies, FlexibleInstances, TypeOperators, DataKinds, ScopedTypeVariables, RecordWildCards, FlexibleContexts
  build-depends:       base >=4.8 && <4.9, text >=1.2 && <1.3, transformers >=0.4 && <0.5, servant, aeson, uuid-types, random, mtl, jwt, bytestring, text, time, http-types, QuickCheck, quickcheck-instances, hashable
  hs-source-dirs:      src
  default-language:    Haskell2010